--- a/AddressBook/package.json
+++ b/AddressBook/package.json
@@ -2,7 +2,7 @@
   "name": "address-book",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server",
+    "start": "node dist/server",
     "start-dev": "nodemon server"
   },
   "dependencies": {
@@ -12,6 +12,9 @@
     "morgan": "^1.7.0"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "jspm": "^0.16.48"
   },
   "jspm": {
@@ -20,6 +23,7 @@
     },
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.6.0",
+      "angular-ui-router": "github:angular-ui/angular-ui-router-bower@^0.3.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.7",
       "moment": "npm:moment@^2.17.1"
     },
